# Kinematic-Modeling-of-a-Tendon-Driven-Continuum-Robot

./: CMakeLists.txt  README.md  Screen Recording 2021-05-04 at 11.32.49 AM.mov  ctcr_configs.csv  main.cpp  tdcr_configs.csv
include/: controller.h  ctcr_model.h  mainloop.h  robot_independent.h  tdcr_model.h  visualizer.h
src/: controller.cpp  ctcr_model.cpp  mainloop.cpp  robot_independent.cpp  tdcr_model.cpp  visualizer.cpp
